--- a/examples/index.html
+++ b/examples/index.html
@@ -6,91 +6,76 @@
     <meta name="author" content="Mattia Larentis">
     <meta http-equiv="X-UA-Compatible" content="IE=9; IE=8;" />
 
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css">
     <link rel="stylesheet" href="../static/stylesheets/bootstrap-switch.css">
     <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.css">
     <link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/docs.css">
 
     <style>
-        .span4, h1 {
+        .span4, h1
+        {
             text-align: center;
         }
 
-        h1 {
+        h1
+        {
             margin-bottom: 20px;
         }
 
-        h3 {
+        h3
+        {
             margin-top: 20px;
         }
     </style>
 </head>
 <body style="padding-top: 50px;">
 
-<a href="https://github.com/nostalgiaz/bootstrap-switch"><img
-    style="position: absolute; top: 0; right: 0; border: 0;"
-    src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"
-    alt="Fork me on GitHub"></a>
+    <div class="container">
 
-<div class="container">
-<div class="row-fluid">
-    <div class="span12">
-        <h1>Bootstrap switch
-            <small>- by <a href="http://larentis.eu">Mattia Larentis</a> <a href="https://twitter.com/spiritualguru">(@SpiritualGuru)</a>
-            </small>
-        </h1>
-    </div>
-</div>
-
-<div class="row-fluid">
-    <div class="span8 offset2" style="text-align: center;">
-        <iframe src="http://ghbtns.com/github-btn.html?user=nostalgiaz&repo=bootstrap-switch&type=watch&count=true"
-                allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
-        <iframe src="http://ghbtns.com/github-btn.html?user=nostalgiaz&repo=bootstrap-switch&type=fork&count=true"
-                allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
-        <iframe src="http://ghbtns.com/github-btn.html?user=nostalgiaz&type=follow&count=true"
-                allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
-    </div>
-</div>
-
-<div class="row-fluid">
-    <div class="span12">
-        <h3>Size</h3>
-        <div class="bs-docs-example">
-            <div class="switch switch-large">
-                <input type="checkbox" checked />
-            </div>
-
-            <div class="switch">
-                <input type="checkbox" checked />
-            </div>
-
-            <div class="switch switch-small">
-                <input type="checkbox" checked />
-            </div>
-
-            <div class="switch switch-mini">
-                <input type="checkbox" checked />
+        <div class="row-fluid">
+            <div class="span12">
+                <div class="well">
+                    <form class="form-horizontal">
+                        <div class="control-group">
+                            <label class="control-label" for="notification1">Notification 1</label>
+                            <div class="controls">
+                                <div class="switch">
+                                    <input type="checkbox" checked />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label class="control-label" for="notification1">Notification 1</label>
+                            <div class="controls">
+                                <div class="switch">
+                                    <input type="checkbox" checked />
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                    <form class="form-horizontal">
+                        <div class="control-group">
+                            <label class="control-label" for="notification1">Notification 1</label>
+                            <div class="controls">
+                                <div class="switch">
+                                    <input type="checkbox" checked />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label class="control-label" for="notification1">Notification 1</label>
+                            <div class="controls">
+                                <div class="switch">
+                                    <input type="checkbox" checked />
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
-        <pre class="prettyprint linenums">
-&lt;div class="switch switch-large">
-    &lt;input type="checkbox" checked />
-&lt;/div>
 
-&lt;div class="switch">
-    &lt;input type="checkbox" checked />
-&lt;/div>
-
-&lt;div class="switch switch-small">
-    &lt;input type="checkbox" checked />
-&lt;/div>
-
-&lt;div class="switch switch-mini">
-    &lt;input type="checkbox" checked />
-&lt;/div></pre>
-    </div>
-</div>
+        <!--
 
 <div class="row-fluid">
     <div class="span12">
@@ -393,81 +378,82 @@ $('#disable-switch').bootstrapSwitch('setActive', false);  // true || false</pre
     </div>
 </div>
 
-<p class="pull-right">
-    <a href="https://twitter.com/SpiritualGuru">follow me</a> -
+-->
+        <p class="pull-right">
+            <a href="https://twitter.com/SpiritualGuru">follow me</a> -
     <a href="http://www.larentis.eu">my site</a>
-</p>
-</div>
-
-
-<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3>Modal</h3>
+        </p>
     </div>
-    <div class="modal-body">
-        <div class="switch">
-            <input type="checkbox" checked />
+
+
+    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h3>Modal</h3>
+        </div>
+        <div class="modal-body">
+            <div class="switch">
+                <input type="checkbox" checked />
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
         </div>
     </div>
-    <div class="modal-footer">
-        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-    </div>
-</div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
-<script src="http://twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.js"></script>
-<script src="../static/js/bootstrap-switch.js"></script>
-<script>
-    window.prettyPrint && prettyPrint();
-    $('#mySwitch').on('switch-change', function (e, data) {
-        var $el = $(data.el)
-            , value = data.value;
-        console.log(e, $el, value);
-    });
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+    <script src="http://twitter.github.com/bootstrap/assets/js/google-code-prettify/prettify.js"></script>
+    <script src="../static/js/bootstrap-switch.js"></script>
+    <script>
+        window.prettyPrint && prettyPrint();
+        $('#mySwitch').on('switch-change', function (e, data) {
+            var $el = $(data.el)
+                , value = data.value;
+            console.log(e, $el, value);
+        });
 
-    $('#toggle-state-switch-button').on('click', function () {
-        $('#toggle-state-switch').bootstrapSwitch('toggleState');
-    });
+        $('#toggle-state-switch-button').on('click', function () {
+            $('#toggle-state-switch').bootstrapSwitch('toggleState');
+        });
 
-    $('#toggle-state-switch-button-on').on('click', function () {
-        $('#toggle-state-switch').bootstrapSwitch('setState', true);
-    });
+        $('#toggle-state-switch-button-on').on('click', function () {
+            $('#toggle-state-switch').bootstrapSwitch('setState', true);
+        });
 
-    $('#toggle-state-switch-button-status').on('click', function () {
-        alert($('#toggle-state-switch').bootstrapSwitch('status'));
-    });
+        $('#toggle-state-switch-button-status').on('click', function () {
+            alert($('#toggle-state-switch').bootstrapSwitch('status'));
+        });
 
-    $('#toggle-state-switch-button-off').on('click', function () {
-        $('#toggle-state-switch').bootstrapSwitch('setState', false);
-    });
+        $('#toggle-state-switch-button-off').on('click', function () {
+            $('#toggle-state-switch').bootstrapSwitch('setState', false);
+        });
 
-    $('#btn-destroy-switch').on('click', function () {
-        $('#destroy-switch').bootstrapSwitch('destroy');
-        $(this).remove();
-    });
+        $('#btn-destroy-switch').on('click', function () {
+            $('#destroy-switch').bootstrapSwitch('destroy');
+            $(this).remove();
+        });
 
-    $('#btn-create').on('click', function () {
-        $('#create-switch').wrap('<div class="switch" />').parent().bootstrapSwitch();
-        $(this).remove()
-    });
+        $('#btn-create').on('click', function () {
+            $('#create-switch').wrap('<div class="switch" />').parent().bootstrapSwitch();
+            $(this).remove()
+        });
 
-    $('#btn-is-active-switch').on('click', function () {
-        alert($('#disable-switch').bootstrapSwitch('isActive'));
-    });
+        $('#btn-is-active-switch').on('click', function () {
+            alert($('#disable-switch').bootstrapSwitch('isActive'));
+        });
 
-    $('#btn-toggle-activation-switch').on('click', function () {
-        $('#disable-switch').bootstrapSwitch('toggleActivation');
-    });
+        $('#btn-toggle-activation-switch').on('click', function () {
+            $('#disable-switch').bootstrapSwitch('toggleActivation');
+        });
 
-    $('#btn-disable-switch').on('click', function () {
-        $('#disable-switch').bootstrapSwitch('setActive', false);
-    });
+        $('#btn-disable-switch').on('click', function () {
+            $('#disable-switch').bootstrapSwitch('setActive', false);
+        });
 
-    $('#btn-activate-switch').on('click', function () {
-        $('#disable-switch').bootstrapSwitch('setActive', true);
-    });
-</script>
+        $('#btn-activate-switch').on('click', function () {
+            $('#disable-switch').bootstrapSwitch('setActive', true);
+        });
+    </script>
 </body>
 </html>
